refactor: Improve file handling and executor usage in ReceiverOptimized and SendFileOptimized